[gd_scene load_steps=10 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://addons/godot-rollback-netcode/log_inspector/monogram_extended.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=6]
default_font = SubResource( 5 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 3 )

[sub_resource type="Theme" id=4]
default_font = SubResource( 3 )
/fonts/font = null

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 34
font_data = ExtResource( 3 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="ColorselectCanvas" type="CanvasLayer" parent="."]

[node name="ColorselectPanel" type="PanelContainer" parent="ColorselectCanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -557.0
margin_right = 410.0
margin_bottom = -111.0

[node name="ColorPicker" type="ColorPicker" parent="ColorselectCanvas/ColorselectPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 439.0
theme = SubResource( 6 )
color = Color( 0.843137, 0.0941176, 0.0941176, 1 )
edit_alpha = false
presets_enabled = false
presets_visible = false

[node name="ConnectionCanvas" type="CanvasLayer" parent="."]

[node name="ConnectionPanel" type="PanelContainer" parent="ConnectionCanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -100.0
margin_right = 410.0
margin_bottom = -10.0

[node name="GridContainer" type="GridContainer" parent="ConnectionCanvas/ConnectionPanel"]
margin_left = 7.0
margin_top = 7.0
margin_right = 393.0
margin_bottom = 92.0
size_flags_horizontal = 3
theme = SubResource( 4 )
columns = 2

[node name="HostLabel" type="Label" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_top = 5.0
margin_right = 191.0
margin_bottom = 22.0
size_flags_horizontal = 3
text = "Host:"

[node name="HostField" type="LineEdit" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_left = 195.0
margin_right = 386.0
margin_bottom = 27.0
size_flags_horizontal = 3
text = "127.0.0.1"

[node name="PortLabel" type="Label" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_top = 36.0
margin_right = 191.0
margin_bottom = 53.0
text = "Porta:"

[node name="PortField" type="LineEdit" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_left = 195.0
margin_top = 31.0
margin_right = 386.0
margin_bottom = 58.0
text = "9000"

[node name="ServerButton" type="Button" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_top = 62.0
margin_right = 191.0
margin_bottom = 85.0
text = "Iniciar como Servidor"

[node name="ClientButton" type="Button" parent="ConnectionCanvas/ConnectionPanel/GridContainer"]
margin_left = 195.0
margin_top = 62.0
margin_right = 386.0
margin_bottom = 85.0
text = "iniciar como Cliente"

[node name="MessageLabel" type="Label" parent="ConnectionCanvas"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -32.0
margin_right = 410.0
margin_bottom = -13.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/line_spacing = 1
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 1
custom_fonts/font = SubResource( 1 )

[node name="ResetButton" type="Button" parent="ConnectionCanvas"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 439.0
margin_top = -45.0
margin_right = 503.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 2 )
text = "QUIT"

[node name="SyncLostLabel" type="Label" parent="ConnectionCanvas"]
visible = false
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -69.0
margin_right = -14.0
margin_bottom = -38.0
text = "SYNC LOST
REGAINING SYNC..."
align = 2

[node name="ServerPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 712, 295 )
scale = Vector2( -1, 1 )

[node name="ClientPlayer" parent="." instance=ExtResource( 2 )]
position = Vector2( 712, 295 )

[connection signal="pressed" from="ConnectionCanvas/ConnectionPanel/GridContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="ConnectionCanvas/ConnectionPanel/GridContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
[connection signal="pressed" from="ConnectionCanvas/ResetButton" to="." method="_on_ResetButton_pressed"]
